chore: switch ecrecover benchmark to patch k256

--- a/extensions/ecc/tests/programs/Cargo.toml
+++ b/extensions/ecc/tests/programs/Cargo.toml
@@ -16,6 +16,9 @@ openvm-algebra-moduli-macros = { path = "../../../algebra/moduli-macros", defaul
 openvm-rv32im-guest = { path = "../../../../extensions/rv32im/guest", default-features = false }
 
 openvm-keccak256 = { path = "../../../../guest-libs/keccak256/" }
+openvm-k256 = { path = "../../../../guest-libs/k256", features = [
+    "ecdsa",
+], optional = true }
 
 serde = { version = "1.0", default-features = false, features = [
     "alloc",
@@ -23,10 +26,6 @@ serde = { version = "1.0", default-features = false, features = [
 ] }
 hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
 hex-literal = { version = "0.4.1", default-features = false }
-k256 = { version = "0.13.3", default-features = false, features = [
-    "ecdsa-core",
-    "ecdsa",
-], optional = true }
 signature = { version = "2.2.0", default-features = false }
 
 [target.'cfg(not(target_os = "zkvm"))'.dependencies]
