--- a/Cargo.toml
+++ b/Cargo.toml
@@ -241,6 +241,7 @@ k256 = { version = "0.13.3", default-features = false }
 p256 = { version = "0.13.2", default-features = false }
 elliptic-curve = { version = "0.13.8", default-features = false }
 ecdsa = { version = "0.16.9", default-features = false }
+signature = { version = "2", default-features = false }
 num-bigint = { version = "0.4.6", default-features = false }
 num-integer = { version = "0.1.46", default-features = false }
 num-traits = { version = "0.2.19", default-features = false }
