--- a/Cargo.toml
+++ b/Cargo.toml
@@ -240,7 +240,7 @@ tiny-keccak = { version = "2.0.2", features = ["keccak"] }
 k256 = { version = "0.13.3", default-features = false }
 p256 = { version = "0.13.2", default-features = false }
 elliptic-curve = { version = "0.13.8", default-features = false }
-ecdsa = { version = "0.16.9", default-features = false }
+ecdsa-core = { version = "0.16.9", package = "ecdsa", default-features = false }
 signature = { version = "2", default-features = false }
 num-bigint = { version = "0.4.6", default-features = false }
 num-integer = { version = "0.1.46", default-features = false }
