--- a/extensions/ecc/guest/Cargo.toml
+++ b/extensions/ecc/guest/Cargo.toml
@@ -11,7 +11,7 @@ repository.workspace = true
 openvm = { workspace = true }
 serde = { workspace = true }
 strum_macros.workspace = true
-ecdsa = { workspace = true, features = ["verifying"] }
+ecdsa-core = { workspace = true, features = ["verifying"] }
 elliptic-curve = { workspace = true, features = ["arithmetic", "sec1"] }
 hex-literal = { workspace = true }
 openvm-custom-insn = { workspace = true }
