--- a/extensions/ecc/tests/programs/Cargo.toml
+++ b/extensions/ecc/tests/programs/Cargo.toml
@@ -16,7 +16,10 @@ openvm-algebra-moduli-macros = { path = "../../../algebra/moduli-macros", defaul
 openvm-rv32im-guest = { path = "../../../../extensions/rv32im/guest", default-features = false }
 
 openvm-keccak256 = { path = "../../../../guest-libs/keccak256/" }
-openvm-k256 = { path = "../../../../guest-libs/k256", features = [
+openvm-k256 = { path = "../../../../guest-libs/k256", package = "k256", features = [
+    "ecdsa",
+], optional = true }
+openvm-p256 = { path = "../../../../guest-libs/p256", package = "p256", features = [
     "ecdsa",
 ], optional = true }
 
@@ -26,7 +29,6 @@ serde = { version = "1.0", default-features = false, features = [
 ] }
 hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
 hex-literal = { version = "0.4.1", default-features = false }
-signature = { version = "2.2.0", default-features = false }
 
 [target.'cfg(not(target_os = "zkvm"))'.dependencies]
 num-bigint = "0.4.6"
@@ -34,8 +36,8 @@ num-bigint = "0.4.6"
 [features]
 default = []
 std = ["serde/std", "openvm/std"]
-k256 = ["openvm-ecc-guest/k256", "dep:k256"]
-p256 = ["openvm-ecc-guest/p256"]
+k256 = ["dep:openvm-k256"]
+p256 = ["dep:openvm-p256"]
 
 [profile.release]
 panic = "abort"
