--- a/guest-libs/ruint/ruint-macro/Cargo.toml
+++ b/guest-libs/ruint/ruint-macro/Cargo.toml
@@ -20,4 +20,4 @@ proc-macro = true
 tag = false
 
 [dev-dependencies]
-openvm-ruint = { path = ".." }
+openvm-ruint = { path = "..", package = "ruint" }
