--- a/examples/u256/Cargo.toml
+++ b/examples/u256/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2021"
 members = []
 
 [dependencies]
-openvm = { git = "https://github.com/openvm-org/openvm.git", branch = "chore/ecc-cleanup", features = [
+openvm = { git = "https://github.com/openvm-org/openvm.git", features = [
     "std",
 ] }
-openvm-ruint = { git = "https://github.com/openvm-org/openvm.git", package = "ruint", branch = "chore/ecc-cleanup" }
+openvm-ruint = { git = "https://github.com/openvm-org/openvm.git", package = "ruint" }
 
 [features]
 default = []
