--- a/guest-libs/k256/Cargo.toml
+++ b/guest-libs/k256/Cargo.toml
@@ -24,7 +24,7 @@ ecdsa-core = { workspace = true, optional = true }
 serde = { workspace = true }
 hex-literal = { workspace = true }
 ff = { workspace = true }
-signature = { workspace = true, optional = true }
+signature = { version = "2", optional = true }
 
 [target.'cfg(not(target_os = "zkvm"))'.dependencies]
 num-bigint = { workspace = true }
@@ -77,4 +77,11 @@ sha256 = []
 test-vectors = []
 
 [package.metadata.cargo-shear]
-ignored = ["openvm", "num-bigint", "serde", "derive_more"]
+ignored = [
+    "openvm",
+    "num-bigint",
+    "serde",
+    "derive_more",
+    "signature",
+    "once_cell",
+]
