Revert "Put `parallel` feature in a bunch of places"
This reverts commit 17270568e1a754981c34b58d2f226073396f896f.

--- a/extensions/ecc/circuit/Cargo.toml
+++ b/extensions/ecc/circuit/Cargo.toml
@@ -11,7 +11,7 @@ repository.workspace = true
 openvm-circuit-primitives-derive = { workspace = true }
 openvm-circuit-primitives = { workspace = true }
 openvm-circuit-derive = { workspace = true }
-openvm-circuit = { workspace = true, features = ["parallel"] }
+openvm-circuit = { workspace = true }
 openvm-instructions = { workspace = true }
 openvm-mod-circuit-builder = { workspace = true }
 openvm-stark-backend = { workspace = true }
