--- a/benchmarks/execute/Cargo.toml
+++ b/benchmarks/execute/Cargo.toml
@@ -10,7 +10,7 @@ license.workspace = true
 [dependencies]
 openvm-benchmarks-utils.workspace = true
 # cargo-openvm.workspace = true
-openvm-circuit = { workspace = true, features = ["parallel"] }
+openvm-circuit.workspace = true
 # openvm-sdk.workspace = true
 openvm-stark-sdk.workspace = true
 openvm-transpiler.workspace = true
