--- a/benchmarks/prove/Cargo.toml
+++ b/benchmarks/prove/Cargo.toml
@@ -9,7 +9,7 @@ license.workspace = true
 
 [dependencies]
 openvm-benchmarks-utils.workspace = true
-openvm-circuit = { workspace = true }
+openvm-circuit.workspace = true
 openvm-sdk = { workspace = true, features = ["evm-verify"] }
 openvm-stark-backend.workspace = true
 openvm-stark-sdk.workspace = true
@@ -47,7 +47,7 @@ default = ["parallel", "jemalloc", "bench-metrics"]
 bench-metrics = ["openvm-native-recursion/bench-metrics"]
 profiling = ["openvm-sdk/profiling"]
 aggregation = []
-parallel = ["openvm-native-recursion/parallel", "openvm-circuit/parallel"]
+parallel = ["openvm-native-recursion/parallel"]
 mimalloc = ["openvm-circuit/mimalloc"]
 jemalloc = ["openvm-circuit/jemalloc"]
 jemalloc-prof = ["openvm-circuit/jemalloc-prof"]
