--- a/examples/i256/Cargo.toml
+++ b/examples/i256/Cargo.toml
@@ -16,11 +16,14 @@ alloy-primitives = "1.1.2"
 default = []
 
 [patch.crates-io]
-openvm = { path = "../../crates/toolchain/openvm" }
-# alloy-primitives uses ruint
+# alloy-primitives uses ruint:
 # ruint = { git = "https://github.com/openvm-org/openvm.git" }
 # Use above if outside of monorepo
 ruint = { path = "../../guest-libs/ruint" }
+
+# remove this if copying example outside of monorepo
+[patch."https://github.com/openvm-org/openvm.git"]
+openvm = { path = "../../crates/toolchain/openvm" }
 
 [profile.release]
 lto = "thin"
