feat: RangeChecker tracegen (#61)
* histogram ready and tested

* var_range tracegen

* half of the test with dummy chip

* new tracegen with warp primitives

* Buffer -> Matrix

* DeviceProofInput

* test passed

* -1 allocation

--- a/tracegen-gpu/Cargo.toml
+++ b/tracegen-gpu/Cargo.toml
@@ -9,3 +9,14 @@ path = "src/lib.rs"
 [dependencies]
 cuda-utils = { workspace = true }
 cuda_kernels = { package = "cuda-kernels-tracegen", path = "../../cuda/kernels/tracegen" }
+stark-backend-gpu = { workspace = true }
+openvm-stark-backend = { workspace = true }
+openvm-stark-sdk = { workspace = true }
+
+# openvm
+openvm-circuit-primitives = { workspace = true }
+
+[dev-dependencies]
+rand = { version = "0.8.5", default-features = false }
+p3-field = { workspace = true }
+p3-baby-bear = { workspace = true }
