chore: fix dependency feature

--- a/crates/circuits/mod-builder/Cargo.toml
+++ b/crates/circuits/mod-builder/Cargo.toml
@@ -12,7 +12,7 @@ license.workspace = true
 openvm-stark-backend = { workspace = true }
 openvm-circuit-primitives = { workspace = true }
 openvm-stark-sdk = { workspace = true }
-openvm-circuit = { workspace = true, features = ["test-utils"] }
+openvm-circuit = { workspace = true }
 openvm-instructions = { workspace = true }
 halo2curves-axiom = { workspace = true, optional = true }
 openvm-pairing-guest = { workspace = true, optional = true }
@@ -35,4 +35,8 @@ openvm-circuit = { workspace = true, features = ["test-utils"] }
 [features]
 default = []
 parallel = ["openvm-stark-backend/parallel"]
-test-utils = ["dep:halo2curves-axiom", "dep:openvm-pairing-guest"]
+test-utils = [
+    "dep:halo2curves-axiom",
+    "dep:openvm-pairing-guest",
+    "openvm-circuit/test-utils",
+]
