--- a/benchmarks/execute/Cargo.toml
+++ b/benchmarks/execute/Cargo.toml
@@ -16,12 +16,12 @@ openvm-stark-sdk.workspace = true
 openvm-transpiler.workspace = true
 openvm-rv32im-circuit.workspace = true
 openvm-rv32im-transpiler.workspace = true
-openvm-bigint-circuit.workspace = true
-openvm-bigint-transpiler.workspace = true
-openvm-keccak256-circuit.workspace = true
-openvm-keccak256-transpiler.workspace = true
-openvm-sha256-circuit.workspace = true
-openvm-sha256-transpiler.workspace = true
+#openvm-bigint-circuit.workspace = true
+#openvm-bigint-transpiler.workspace = true
+#openvm-keccak256-circuit.workspace = true
+#openvm-keccak256-transpiler.workspace = true
+#openvm-sha256-circuit.workspace = true
+#openvm-sha256-transpiler.workspace = true
 eyre.workspace = true
 derive_more = { workspace = true, features = ["from"] }
 rand.workspace = true
