--- a/tracegen-gpu/Cargo.toml
+++ b/tracegen-gpu/Cargo.toml
@@ -7,14 +7,15 @@ edition.workspace = true
 path = "src/lib.rs"
 
 [dependencies]
-cuda-utils = { workspace = true }
-cuda_kernels = { package = "cuda-kernels-tracegen", path = "../../cuda/kernels/tracegen" }
 stark-backend-gpu = { workspace = true }
 openvm-stark-backend = { workspace = true }
 openvm-stark-sdk = { workspace = true }
 
 # openvm
 openvm-circuit-primitives = { workspace = true }
+
+[build-dependencies]
+cc = { version = "1.0", features = ["parallel"] }  # For CUDA compilation
 
 [dev-dependencies]
 rand = { version = "0.8.5", default-features = false }
