--- a/.github/workflows/native-compiler.yml
+++ b/.github/workflows/native-compiler.yml
@@ -39,4 +39,4 @@ jobs:
       - name: Run circuit and compiler tests
         working-directory: extensions/native/compiler
         run: |
-          cargo nextest run --cargo-profile=fast --features parallel
+          cargo nextest run --cargo-profile=fast --features parallel --test-threads=1 --no-fail-fast
