--- a/.github/workflows/primitives.yml
+++ b/.github/workflows/primitives.yml
@@ -40,19 +40,19 @@ jobs:
       - name: Run tests for primitives
         working-directory: crates/circuits/primitives
         run: |
-          cargo nextest run --cargo-profile fast --features parallel
+          cargo nextest run --cargo-profile fast --features parallel --test-threads=1 --no-fail-fast
 
       - name: Run tests for poseidon2-air
         working-directory: crates/circuits/poseidon2-air
         run: |
-          cargo nextest run --cargo-profile fast --features parallel
+          cargo nextest run --cargo-profile fast --features parallel --test-threads=1 --no-fail-fast
 
       - name: Run tests for sha256-air
         working-directory: crates/circuits/sha256-air
         run: |
-          cargo nextest run --cargo-profile fast --features parallel
+          cargo nextest run --cargo-profile fast --features parallel --test-threads=1 --no-fail-fast
 
       - name: Run tests for mod-builder
         working-directory: crates/circuits/mod-builder
         run: |
-          cargo nextest run --cargo-profile fast --features parallel
+          cargo nextest run --cargo-profile fast --features parallel --test-threads=1 --no-fail-fast
