--- a/extensions/ecc/circuit/Cargo.toml
+++ b/extensions/ecc/circuit/Cargo.toml
@@ -19,6 +19,7 @@ openvm-rv32im-circuit = { workspace = true }
 openvm-algebra-circuit = { workspace = true }
 openvm-rv32-adapters = { workspace = true }
 openvm-ecc-transpiler = { workspace = true }
+openvm-ecc-guest = { workspace = true, features = ["ed25519"] }
 
 num-bigint = { workspace = true }
 num-traits = { workspace = true }
