--- a/extensions/ecc/tests/Cargo.toml
+++ b/extensions/ecc/tests/Cargo.toml
@@ -13,6 +13,7 @@ openvm-circuit = { workspace = true, features = ["test-utils"] }
 openvm-transpiler.workspace = true
 openvm-algebra-circuit.workspace = true
 openvm-algebra-transpiler.workspace = true
+openvm-ecc-guest.workspace = true
 openvm-ecc-transpiler.workspace = true
 openvm-ecc-circuit.workspace = true
 openvm-rv32im-transpiler.workspace = true
@@ -22,7 +23,6 @@ openvm-sdk.workspace = true
 eyre.workspace = true
 num-bigint.workspace = true
 hex-literal.workspace = true
-num-bigint.workspace = true
 halo2curves-axiom = { workspace = true }
 
 [features]
