--- a/.github/workflows/vm.yml
+++ b/.github/workflows/vm.yml
@@ -39,4 +39,4 @@ jobs:
       - name: Run vm crate tests
         working-directory: crates/vm
         run: |
-          cargo nextest run --cargo-profile=fast --features parallel --test-threads=1 --no-fail-fast
+          cargo nextest run --cargo-profile=fast --features parallel
