--- a/extensions/ecc/circuit/Cargo.toml
+++ b/extensions/ecc/circuit/Cargo.toml
@@ -22,6 +22,7 @@ openvm-ecc-transpiler = { workspace = true }
 openvm-ecc-guest = { workspace = true, features = ["ed25519"] }
 
 num-bigint = { workspace = true }
+num-integer = { workspace = true }
 num-traits = { workspace = true }
 strum = { workspace = true }
 derive_more = { workspace = true }
