--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -44,7 +44,7 @@ test-log.workspace = true
 
 openvm-circuit = { workspace = true, features = ["test-utils"] }
 openvm-stark-sdk.workspace = true
-openvm-native-circuit.workspace = true
+openvm-native-circuit = { workspace = true, features = ["test-utils"] }
 openvm-native-compiler.workspace = true
 openvm-rv32im-transpiler.workspace = true
 
