--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -4,6 +4,8 @@ name: Verify Versioning Compatibility
 on:
   push:
     branches: ["main"]
+  pull_request:
+    branches: ["main"]
   workflow_dispatch: {}
 
 jobs:
