--- a/tracegen-gpu/Cargo.toml
+++ b/tracegen-gpu/Cargo.toml
@@ -12,12 +12,23 @@ openvm-stark-backend = { workspace = true }
 openvm-stark-sdk = { workspace = true }
 
 # openvm
+openvm-circuit = { workspace = true }
 openvm-circuit-primitives = { workspace = true }
+openvm-rv32im-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution-e4", default-features = false }
+openvm-rv32-adapters = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution-e4", default-features = false }
+openvm-rv32im-transpiler = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution-e4", default-features = false }
+openvm-rv32im-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution-e4", default-features = false }
+
+p3-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "539bbc84085efb609f4f62cb03cf49588388abdb" }
 
 [build-dependencies]
 cc = { version = "1.0", features = ["parallel"] }  # For CUDA compilation
 
 [dev-dependencies]
+itertools = { version = "0.14.0", default-features = false, features = ["use_std"] }
 rand = { version = "0.8.5", default-features = false }
 p3-field = { workspace = true }
 p3-baby-bear = { workspace = true }
+openvm-circuit = { workspace = true, features = ["test-utils"] }
+openvm-rv32im-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution-e4", features = ["test-utils"] }
+openvm-instructions = { workspace = true }
