--- a/Cargo.toml
+++ b/Cargo.toml
@@ -169,6 +169,9 @@ openvm-pairing-transpiler = { path = "extensions/pairing/transpiler", default-fe
 openvm-pairing-guest = { path = "extensions/pairing/guest", default-features = false }
 openvm-verify-stark = { path = "guest-libs/verify_stark", default-features = false }
 
+# Guest Libraries
+openvm-sha2 = { path = "guest-libs/sha2", default-features = false }
+
 # Benchmarking
 openvm-benchmarks-utils = { path = "benchmarks/utils", default-features = false }
 
@@ -247,6 +250,7 @@ num-integer = { version = "0.1.46", default-features = false }
 num-traits = { version = "0.2.19", default-features = false }
 ff = { version = "0.13.1", default-features = false }
 sha2 = { version = "0.10", default-features = false }
+signature = { version = "2.2.0", default-features = false } 
 
 # For local development. Add to your `.cargo/config.toml`
 # [patch."https://github.com/Plonky3/Plonky3.git"]
