--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -213,10 +213,14 @@ jobs:
 
           # For PRs, get the latest commit from the target branch
           if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            REF_HASH=$(echo "${{ github.base_ref }}" | sha256sum | cut -d' ' -f1)
+            if [[ "${{ github.base_ref }}" == "refs/heads/main" ]]; then
+              REF_HASH="main"
+            else
+              REF_HASH=$(echo "${{ github.base_ref }}" | sha256sum | cut -d' ' -f1)
+            fi
             echo "Target branch REF_HASH: $REF_HASH"
           else
-            REF_HASH=$(echo "refs/heads/main" | sha256sum | cut -d' ' -f1)
+            REF_HASH="main"
           fi
 
           prev_json_files=$(echo $matrix | jq -r --arg target "$REF_HASH" '
