--- a/tracegen-gpu/Cargo.toml
+++ b/tracegen-gpu/Cargo.toml
@@ -21,6 +21,7 @@ openvm-rv32im-guest = { git = "https://github.com/openvm-org/openvm.git", branch
 
 p3-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "539bbc84085efb609f4f62cb03cf49588388abdb" }
 
+openvm-poseidon2-air = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution", default-features = false }
 [build-dependencies]
 cc = { version = "1.0", features = ["parallel"] }  # For CUDA compilation
 
