--- a/.config/nextest.toml
+++ b/.config/nextest.toml
@@ -5,10 +5,9 @@
 # Match all tests with "persistent" in their name
 filter = 'test(~persistent)'
 # Give these tests 5x the default weight because they use more memory
-weight = 5
+threads-required = 5
 
 # custom profile for heavy tests
 [profile.heavy]
-inherits = "default"
 # Run fewer tests in parallel for heavy workloads
 test-threads = 8
