--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -96,4 +96,4 @@ jobs:
         working-directory: crates/sdk
         run: |
           export RUST_BACKTRACE=1
-          cargo nextest run --cargo-profile=fast --test-threads=2 --features parallel,evm-verify
+          cargo nextest run --cargo-profile=fast --features parallel,evm-verify
