--- a/Cargo.toml
+++ b/Cargo.toml
@@ -98,7 +98,8 @@ lto = "fat"
 codegen-units = 1
 
 [profile.dev]
-opt-level = 1
+opt-level = 0
+debug = 0
 
 # For O1 optimization but still fast(ish) compile times
 [profile.fast]
