--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -25,6 +25,7 @@ jobs:
     runs-on:
       - runs-on=${{ github.run_id }}
       - family=m7a.24xlarge
+      - image=ubuntu24-full-x64
       - disk=large
       - extras=s3-cache
 
